@@ -1,5 +1,15 @@
 2006-12-28  Matthias Clasen  <mclasen@redhat.com>
 
+	* gobject/tmpl/gtype.sgml: Updates
+
+	* gobject/tmpl/gtypemodule.sgml: Document dynamic type
+	registration macros.
+
+	* gobject/gobject-docs.sgml: Add "Since 2.14" index
+	* gobject/gobject-sections.txt: Add dynamic type macros
+
+2006-12-28  Matthias Clasen  <mclasen@redhat.com>
+
 	* gobject/tmpl/objects.sgml: Clarify a detail about
 	g_object_set_data_full.  (#343750, Christian Neumair)
 
